--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.onboarding">
+
+    <uses-permission android:name="android.permission.CAMERA"
+        tools:ignore="WrongManifestParent" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Onboarding">
         <activity android:name=".mainscreen"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
